--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,12 @@ yarn-error.log*
 next-env.d.ts
 
 dev.db*
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
