--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "deploy": "firebase deploy",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +18,7 @@
     "@mui/material": "^5.15.11",
     "@mui/material-nextjs": "^5.15.11",
     "@prisma/client": "^5.10.2",
+    "firebase": "^10.8.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
